--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -4,6 +4,7 @@ Global Styles
 
  body {
      box-sizing: border-box;
+     background-color: #faebd7;
  }
 
 /*
@@ -13,7 +14,7 @@ Navbar Styles
 .navbar {
     border-radius: 0;
     margin-bottom: 0;
-    background-color:#fff;
+    background-color:#faebd7;
     border: none;
     font-family: 'Playfair Display', serif;
     font-weight: bold;
@@ -44,7 +45,7 @@ Home View Styles
 }
 
 .pr-content-1 {
-    background-color:#fff;
+    background-color:#faebd7;
     text-align: center;
     font-family: 'Playfair Display', serif;
     text-shadow: .1em .1em 0 #d3d3d3;
@@ -58,3 +59,16 @@ Home View Styles
     max-height: 50rem;
     padding: 0 0 0 0;
 }
+
+/*
+Register
+*/
+
+.rg-master {
+    font-family: 'Playfair Display', serif;  
+}
+
+.rg-master h1, h5 {
+    text-shadow: .05em .05em 0 #d3d3d3;
+}
+
