--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,12 +1,50 @@
 <div class="container-fluid">
     <div class="row pr-content">
-        <div class="col-sm-6 pr-content-1">
+        <div class="col-md-6 pr-content-1">
             <h1>{{ description }}</h1>
             <br/>
-            <button class="btn btn-danger btn-lg">Sign Up</button>
+            <button type="button" href="/register" class="btn btn-danger btn-lg">Sign Up</button>
         </div>
-        <div class="col-sm-6 pr-content-2">
+        <div class="hidden-xs col-md-6 pr-content-2">
             <img src="/images/mike-wilson-96168.jpg" class="img-responsive">
+        </div>
+    </div>
+</div>
+
+<!-- teamwork image -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6 pr-content-3">
+            <img src="/images/rawpixel-com-250087.jpg" class="img-responsive">
+        </div>
+        <div class="col-md-6 pr-content-4 text-center">
+            <h2>{{ slogan }}</h2>
+            <hr>
+            <br>
+            <h3 class="pr-content-4-mod">{{ companyDescription }}</h3>
+        </div>
+    </div>
+</div>
+
+<!-- footer -->
+<div class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <a href="#">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="col-md-4 text-center">
+                <a href="#">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="col-md-4 text-center">
+                <a href="#">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+            </div>
         </div>
     </div>
 </div>
