--- a/client/views/register.html
+++ b/client/views/register.html
@@ -81,8 +81,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="text-center">
-                                <button class="btn btn-lg btn-danger">Create Organization Account</button>
+                            <div>
+                                <button class="btn btn-lg btn-danger" ng-click="createOrg()">Create Account</button>
                             </div>
                         </form>
                     </div>
@@ -103,7 +103,7 @@
                                 <input type="text" class="form-control" placeholder="Enter a new password" ng-model="volPassword">
                             </div>
                             <div class="text-center">
-                                <button class="btn btn-lg btn-danger">Create New Account</button>
+                                <button class="btn btn-lg btn-danger" ng-click="createVol()">Create Account</button>
                             </div>
                         </form>
                     </div>
