--- a/client/views/organization_login.html
+++ b/client/views/organization_login.html
@@ -1,6 +1,9 @@
 <div class="container">
-    <div class="row">
+    <div class="row rg-master">
         <div class="col-md-4 col-md-offset-4 text-center thing">
+            <h1>Organization Login</h1>
+            <br/>
+            <hr>
             <form>
                 <div class="form-group">
                     <a href="/auth/google">Sign In with Google</a>
