--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -111,3 +111,21 @@ Register
     text-shadow: .05em .05em 0 #d3d3d3;
 }
 
+.bg {
+  background: url('./basic.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 350px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
+}
+
+.jumbotron {
+  height: 350px;
+  color: white;
+  text-shadow: #444 0 1px 1px;
+  background:transparent;
+}
+
+
