--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -112,7 +112,7 @@ Register
 }
 
 .bg {
-  background: url('./basic.jpg') no-repeat center center;
+  background: url('https://images3.alphacoders.com/853/thumb-1920-85305.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
   height: 350px; /*same height as jumbotron */
@@ -127,5 +127,3 @@ Register
   text-shadow: #444 0 1px 1px;
   background:transparent;
 }
-
-
