--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -111,18 +111,19 @@ Register
     text-shadow: .05em .05em 0 #d3d3d3;
 }
 
-.bg {
+.orgBG {
   background: url('https://images3.alphacoders.com/853/thumb-1920-85305.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
-  height: 350px; /*same height as jumbotron */
+  height: 300px; /*same height as jumbotron */
   top:0;
   left:0;
+  filter: blur(1.5px);
   z-index: -1;
 }
 
 .jumbotron {
-  height: 350px;
+  height: 300px;
   color: white;
   text-shadow: #444 0 1px 1px;
   background:transparent;
