--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,3 +1,5 @@
+<main-nav></main-nav>
+
 <div class="container-fluid">
     <div class="row pr-content">
         <div class="col-md-6 pr-content-1">
