--- a/client/views/organizationLogin.html
+++ b/client/views/organizationLogin.html
@@ -1,3 +1,5 @@
+<main-nav></main-nav>
+
 <div class="container">
     <div class="row rg-master">
         <div class="col-md-4 col-md-offset-4 text-center thing">
