--- a/client/views/register.html
+++ b/client/views/register.html
@@ -1,3 +1,5 @@
+<main-nav></main-nav>
+
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center rg-master">
