--- a/client/views/register.html
+++ b/client/views/register.html
@@ -97,6 +97,10 @@
                     <div class="col-md-8 text-justify">
                         <form>
                             <div class="form-group">
+                                <label for="volName">Name</label>
+                                <input type="text" class="form-control" placeholder="Enter your full name" ng-model="volName">
+                            </div>
+                            <div class="form-group">
                                 <label for="volEmail">Email</label>
                                 <input type="text" class="form-control" placeholder="Enter your email address" ng-model="volEmail">
                             </div>
