fixes Organization registration and login using passport and bcrypt

--- a/client/views/register.html
+++ b/client/views/register.html
@@ -48,14 +48,23 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
+                                        <label for="orgContactPhone">Primary Phone</label>
+                                        <input type="text" class="form-control" placeholder="Contact Phone Number" ng-model="orgContactPhone">
+                                    </div>
+                                </div>
+                              <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
                                         <label for="orgEmail">Organization Email & Username</label>
                                         <input type="text" class="form-control" placeholder="Enter Organization Email" ng-model="orgEmail">
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="orgName">Password</label>
-                                <input type="text" class="form-control" placeholder="Enter Password" ng-model="orgPassword">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="orgName">Password</label>
+                                        <input type="text" class="form-control" placeholder="Enter Password" ng-model="orgPassword">
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label for="orgAddress">Address</label>
