--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -128,3 +128,13 @@ Register
   text-shadow: #444 0 1px 1px;
   background:transparent;
 }
+
+/*
+Volunteer Profile Styles
+*/
+
+.vol-profile-cont {
+    background-color: #faebd7;
+    font-family: 'Playfair Display', serif;
+    box-shadow: 2px 2px 2px 1px rgb(0, 0, 0, 0.2) !important;
+}
