--- a/client/views/volunteerProfile.html
+++ b/client/views/volunteerProfile.html
@@ -1,23 +1,53 @@
  <volunteer-nav></volunteer-nav>
  
  <div class="container">
-     <div class="row">
+     <div class="row"> 
          <div class="col-md-4">
-             <img ng-src="{{volunteer.image}}" class="img-round img-responsive">
-             <h3>{{ volunteer.name }}</h3>
+            <div class="thumbnail vol-profile-cont">
+                <img ng-src="{{volunteer.image}}">
+                <div class="caption">
+                    <h3>{{ volunteer.name }}</h3>
+                    <p>{{ volunteer.location }}</p>
+                    <hr>
+                    <p>{{ volunteer.about }}</p>
+                </div>
+              <buttton ng-click="editProfile()" class="btn btn-danger">Edit Profile</buttton>
+            </div>
          </div>
         <div class="col-md-8">
+            <div class="thumbnail vol-profile-cont ">
+                <h1>Volunteer Schedule</h1>
+                <hr>
+                <buttton ng-click="findEvents()" class="btn btn-danger">Search Events</buttton>
+            </div>
+            
         </div>
      </div>
      <div class="row"> 
          <div class="col-md-8">
+             <div class="thumbnail vol-profile-cont">
+                 <h1>Completed Events</h1>
+                 <hr>
+                 <table class="table table-striped">
+                     <thead>
+                        <tr>
+                            <th></th>
+                        </tr>
+                     </thead>
+                 </table>
+             </div>
          </div>
-         <div class="col-md-4">
+         <div class="col-md-4 ">
+             <div class="thumbnail vol-profile-cont">
+                 <div class="caption">
+                     <h1>Achievements</h1>
+                     <hr>
+                 </div>
+             </div>
          </div>
      </div>
      <div class="row">
          <div class="col">
-             <buttton class="btn btn-lg btn-danger">Update Profile</buttton>
          </div>
      </div>
  </div>
