Adds OrganizationProfile/VolunteerProfile controllers and views

--- a/client/views/volunteerProfile.html
+++ b/client/views/volunteerProfile.html
@@ -20,7 +20,6 @@
                 <hr>
                 <buttton ng-click="findEvents()" class="btn btn-danger">Search Events</buttton>
             </div>
-            
         </div>
      </div>
      <div class="row"> 
@@ -31,9 +30,18 @@
                  <table class="table table-striped">
                      <thead>
                         <tr>
-                            <th></th>
+                            <th>Date</th>
+                            <th>Organization</th>
+                            <th>Activity</th>
+                            <th>Hours</th>
                         </tr>
                      </thead>
+                    <tbody ng-repeat="c in completedEvents">
+                        <td>{{ c.date}}</td>
+                        <td>{{ c.organizationName }}</td>
+                        <td>{{ c.title }}</td>
+                        <td>{{ c.endTime - c.startTime }}</td>
+                    </tbody>
                  </table>
              </div>
          </div>
