--- a/client/views/register.html
+++ b/client/views/register.html
@@ -29,6 +29,7 @@
                         </div>
                     </div> 
                   </div>  <!-- end of radio row -->
+                </div>
             
             <!-- org register --> 
             <div class="container" ng-show="userType === 'org'">
@@ -128,4 +129,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
