--- a/client/views/editVolunteerProfile.html
+++ b/client/views/editVolunteerProfile.html
@@ -100,12 +100,12 @@
 
     <div class="row">
         <div class="col-md-8 text-center">
-            <form>
+            <form ng-submit="updatePic()">
                 <label class="btn btn-danger">
                     Browse
+                <input type="file" file-model="file.upload" name="profilePic" style="visibility: hidden"> 
                 </label>
-                <input type="file" file-model="file.upload" name="profilePic" style="visibility: none;"> 
-                <button class="btn btn-danger">Add Image</button>
+                <button class="btn btn-danger" type="submit">Add Image</button>
             </form>
         </div>
     </div>
