--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -2,12 +2,52 @@
 Global Styles
 */
 
- body {
-     box-sizing: border-box;
-     background-color: #faebd7;
-     height: 100%;
-     padding-top: 60px;
- }
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    overflow-x: hidden;
+    font-family: 'Open Sans', sans-serif;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+}
+
+li {
+
+    list-style: none;
+    display: inline-block
+}
+
+a {
+    text-decoration: none;
+    transition: all 200ms ease-in-out;
+}
+
+a:hover,
+a:active {
+    text-decoration: none;
+}
+
+h1,
+h2,
+h4 {
+    font-family: 'PT Sans Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+p {
+    font-size: 15px;
+    line-height: 21px;
+}
+
+.btn {
+    transition: all 100ms ease-in-out;
+    font-weight: 500 !important;
+    text-transform: uppercase;
+}
 
 hr {
     border-top: 3px double #000 !important;
@@ -18,35 +58,30 @@ hr {
 Navbar Styles
 */
 
+
 .navbar {
-    border-radius: 0;
-    margin-bottom: 0;
-    background-color:#faebd7;
-     border: none;  
-    font-family: 'Playfair Display', serif;
-    font-weight: bold;
-
+    background-color: #222222 !important;
+    text-transform: uppercase;
+    font-family: 'PT Sans Narrow', Arial, sans-serif;
+    font-weight: 700;
 }
 
-.navbar-brand {
-    font-family: 'Playfair Display SC', serif;
-    color: #000 !important;
+.navbar a {
+    color: #fff !important;
+    opacity: 0.7;
 }
 
-.menu-item {
-    color: #000 !important;
-    text-align: center;
-}
 
-.navbar-collapse {
-    color: #000 !important;
+.navbar a:hover {   
+    opacity: 1;
+    background-color: #111111 !important;
 }
 
 /*
 Home View Styles
 */
 
-.row.pr-content {
+/*.row.pr-content {
     display: flex;
     flex-wrap: wrap;
     padding-top: 0;
@@ -80,23 +115,187 @@ Home View Styles
 
 .pr-content-4-mod {
     line-height: 4.5rem;
+}*/
+
+.header {
+    height: 600px;
+    width: 100%;
+    padding: 30px 0 30px;
+    margin-top: 50px;
+    background-image: url(../images/bg3.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
 }
 
-/*
-Footer in Home View
-*/
 
-.footer {
-    background-color: #000;
-    color: #faebd7;
-    height: 30rem;
+.header img {
+    height: 350px;
+    width: 450px;
+    margin: 70px 0 0 40px;
 }
 
-.fa {
-    text-decoration: none;
-    color: #faebd7;
-    font-size: 5rem;
-    padding: 5rem 0 0 0;
+.header h1 {
+    font-size: 40px;
+    font-weight: 700;
+    padding-top: 30px;
+}
+
+.header h1,
+.header p,
+.header button { 
+    margin-top: 20px;
+}
+
+.header .btn {
+    border-radius: 0;
+    margin: 40px 20px;
+}
+
+
+@media(max-width:768px) {
+    .header {
+        padding: 30px;
+        height: 750px;
+    }
+
+    .header img {
+        width: 90%;
+        height: 300px;
+        margin: 20px 0 0 20px;
+    }
+
+    .header .btn {
+        font-size: 10px;
+        margin-left: 20px;
+    }
+
+    .header h1 {
+        font-size: 20px;
+    }
+
+    .header p {
+        font-size: 10px;
+    }
+}
+
+
+/*SERVICES*/
+
+.services {
+    background-color: #f1f1f1;
+    padding: 40px 0 40px;
+    text-align: center;
+}
+
+.services h2,
+.services h4 {
+    color: #000;
+    /*margin: 20px 0 20px;*/
+}
+
+.services p {
+    color: #4c4c4c;
+    font-size: 14px;
+    padding-bottom: 40px;
+}
+
+.services i {
+    height: 80px;
+    width: 80px;
+    font-size: 30px;
+    padding: 25px 20px;
+    border-radius: 50%;
+    background-color: #6699cc;
+    color: #fff;
+}
+
+
+@media(max-width:768px) {
+    
+    .services {
+        
+        padding: 30px;
+    }
+}
+
+
+/*TEAM*/
+
+.team {
+    padding: 40px 0 40px;
+    background-color: #3399ff;
+    text-align: center;
+    color: white;
+}
+
+.team b,
+.team h2,
+.team h4 {
+    margin: 20px 0 20px;
+    color: #fff;
+}
+
+
+.team p {
+    color: #fff;
+}
+
+.team img {
+    height: 150px;
+    width: 150px;
+    margin-top: 80px;
+}
+
+.team i {   
+    height: 30px;
+    width: 30px;
+    padding: 5px;
+    font-size: 17px;
+    border-radius: 50%;
+    background-color: #a0db8e;
+    color: #fff;
+}
+
+.team a:hover i {
+    background-color: #709963;
+}
+
+
+/*CONTACT*/
+
+.contact {
+    background-color: #f1f1f1;
+    padding: 40px 0 80px;
+    text-align: center;
+}
+
+.contact p {
+    padding-bottom: 80px;
+    color: #737373;
+}
+
+.contact h2 {
+    color: #4c4c4c;
+    margin: 20px 0 20px;
+}
+
+.contact .input-group {
+    margin-bottom: 25px;
+}
+
+.contact .btn {  
+    border-radius: 0;
+    width: 100%;
+    font-size: 15px;
+    background-color: #3399ff;
+    color: #fff;
+}
+
+.contact .btn:hover {
+    background-color: #0080ff;
+    color: white;
 }
 
 /*
