--- a/client/views/mainNav.html
+++ b/client/views/mainNav.html
@@ -1,4 +1,4 @@
-   <!-- navbar -->
+<!-- navbar -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- toggle effect and navbar brand -->
@@ -32,3 +32,27 @@
         </div>
     </div>
 </nav>
+
+
+<div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">LinkTank</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#">Search Organization</a></li>
+                <li><a href="#">Search Volunteers</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Log Out</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
