Got nav buttons working and login/logout/register pages looking better

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -6,8 +6,7 @@
             <div class="col-md-6 wow fadeInLeft">
                 <h1>{{ slogan }}</h1>
                 <p>{{companyDescription}}</p>
-                <button class="btn btn-lg btn-primary">Sign In</button>
-                <button class="btn btn-lg btn-success">Sign Up</button>
+                <button class="btn btn-lg btn-success"><a class="menu-item" href="/register">Sign Up</a></button>
             </div>
             <div class="col-md-6 wow fadeInRight img-rounded">
                 <img src="./images/homeSlideIn.jpg" alt="This should be a cool picture">
@@ -126,4 +125,13 @@
 </div>
 
 <!---End Contact ->
+
+<!--weqf-->
+
+
+
+
+
+
+
 
