--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,7 +1,3 @@
-/*
-Global Styles
-*/
-
 * {
     padding: 0;
     margin: 0;
@@ -21,6 +17,7 @@ li {
 }
 
 a {
+    color: white !important;
     text-decoration: none;
     transition: all 200ms ease-in-out;
 }
@@ -33,7 +30,7 @@ a:active {
 h1,
 h2,
 h4 {
-    font-family: 'PT Sans Narrow', Arial, sans-serif;
+    font-family: 'PT Sans Narrow', 'Arial', 'sans-serif';
     text-transform: uppercase;
     font-weight: 700;
 }
@@ -49,18 +46,12 @@ p {
     text-transform: uppercase;
 }
 
-hr {
-    border-top: 3px double #000 !important;
-    /* border-color: #000 !important; */
-}
 
-/*
-Navbar Styles
-*/
+/*NAVIGATION*/
 
 
 .navbar {
-    background-color: #222222 !important;
+    background-color: #333333 !important;
     text-transform: uppercase;
     font-family: 'PT Sans Narrow', Arial, sans-serif;
     font-weight: 700;
@@ -71,51 +62,24 @@ Navbar Styles
     opacity: 0.7;
 }
 
-
 .navbar a:hover {   
     opacity: 1;
     background-color: #111111 !important;
 }
 
+/*dropdown stuff*/
+.navbar ul {
+    color: #fff !important;
+    background-color: #333333 !important;
+}
+
+.navbar ul:hover {   
+    background-color: #333333 !important;
+}
+
 /*
 Home View Styles
 */
-
-/*.row.pr-content {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 0;
-}
-
-.pr-content-1 {
-    background-color:#faebd7;
-    text-align: center;
-    font-family: 'Playfair Display', serif;
-    text-shadow: .1em .1em 0 #d3d3d3;
-}
-
-.pr-content h1{
-    padding-top: 1rem;
-}
-
-.pr-content-2 {
-    min-height: auto;
-    padding: 0 0 0 0;
-}
-
-.pr-content-3 {
-    max-height: 20%;
-    padding: 0 0 0 0;
-}
-
-.pr-content-4 {
-    font-family: 'Playfair Display', serif;
-    text-shadow: .1em .1em 0 #d3d3d3;
-}
-
-.pr-content-4-mod {
-    line-height: 4.5rem;
-}*/
 
 .header {
     height: 600px;
@@ -301,7 +265,7 @@ Home View Styles
 /*
 Register
 */
-
+/*
 .rg-master {
     font-family: 'Playfair Display', serif;  
 }
@@ -314,7 +278,7 @@ Register
   background: url('https://images3.alphacoders.com/853/thumb-1920-85305.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
-  height: 300px; /*same height as jumbotron */
+  height: 300px; 
   top:0;
   left:0;
   filter: blur(1.5px);
@@ -326,14 +290,14 @@ Register
   color: white;
   text-shadow: #444 0 1px 1px;
   background:transparent;
-}
+}*/
 
 /*
 Volunteer Profile Styles
 */
 
-.vol-profile-cont {
+/*.vol-profile-cont {
     background-color: #faebd7;
     font-family: 'Playfair Display', serif;
     box-shadow: 2px 2px 2px 1px rgb(0, 0, 0, 0.2) !important;
-}
+}*/
