--- a/client/views/home.html
+++ b/client/views/home.html
@@ -94,43 +94,8 @@
 
 
 <!--- Contact -->
-
-<div id="contact" class="contact">
-    <div class="container">
-        <div class="row">
-            <h2 class="wow fadeInUp">Contact Us</h2>
-            <p class="wow fadeInUp" data-wow-delay="0.4">What do you have to say? Message us anytime!</p>
-            <div class="col-md-6">
-                <div class="input-group input-group-lg wow fadeInUp" data-wow-delay="0.3s">
-                    <span class="input-group-addon" id="sizing-addon1"><i class="fa fa-user" aria-hidden="true"></i></span>
-                    <input type="text" class="form-control" aria-describedby="sizing-addon1" placeholder="Full Name">
-                </div>
-                <div class="input-group input-group-lg wow fadeInUp" data-wow-delay=".6s">
-                    <span class="input-group-addon" id="sizing-addon1"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                    <input type="text" class="form-control" aria-describedby="sizing-addon1" placeholder="Email Address">
-                </div>
-                <div class="input-group input-group-lg wow fadeInUp" data-wow-delay=".9s">
-                    <span class="input-group-addon" id="sizing-addon1"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                    <input type="text" class="form-control" aria-describedby="sizing-addon1" placeholder="Phone Number">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="input-group wow fadeInUp" data-wow-delay="1.2s">
-                    <textarea name="" id="" cols="80" rows="6" class="form-control" placeholder="What's Up?"></textarea>
-                </div>
-                <button class="btn btn-lg wow fadeInUp" data-wow-delay="1.5s">Submit Your Message</button>
-            </div>
-        </div>
-    </div>
-</div>
-
+<contact-area></contact-area>
 <!---End Contact ->
-
-<!--weqf-->
-
-
-
-
 
 
 
