--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -77,6 +77,11 @@ p {
     background-color: #333333 !important;
 }
 
+.signInDrop {
+    width: 30em;
+    height: 25em;
+}
+
 /*
 Home View Styles
 */
@@ -301,3 +306,37 @@ Volunteer Profile Styles
     font-family: 'Playfair Display', serif;
     box-shadow: 2px 2px 2px 1px rgb(0, 0, 0, 0.2) !important;
 }*/
+
+/*vol profile*/
+
+.volHeader {
+    height: 355px;
+    width: 100%;
+    padding: 30px 0 30px;
+    margin-top: 50px;
+    background: url(../images/profileBG.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#firstRow{
+    padding-top: 8em;
+}
+
+#secondRow{
+    padding: 20px 0 20px;
+}
+
+#aboutThumbnail {
+    padding: 20px 0 20px;
+}
+
+.profilePic {
+    border-radius: 100%;
+    border-style: solid;
+    border-width: 6px;
+    border-color: white;
+    height: 260px;
+    width: 260px;
+}
