--- a/client/views/mainNav.html
+++ b/client/views/mainNav.html
@@ -1,5 +1,3 @@
-
-
 <div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -14,20 +12,50 @@
         <div class="navbar-collapse collapse navbar-right" id="thing-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
+                    <!--click sign in - drops once-->
                     <a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Sign In<span class="caret"></span>
                     </a>
+                    <!--shows dropdown-->
                     <ul class="dropdown-menu">
-                        <li><a class="menu-item" href="/volunteer_login">Volunteer Login</a></li>
-                        <li><a class="menu-item" href="/organization_login">Organization Login</a></li>
-                        <li><a class="menu-item" href="/organization_profile">Organization Profile</a></li>
-                        <li><a class="menu-item" href="/volunteer_profile">Volunteer Profile</a></li>
+                        <li>
+                            <div class=" signInDrop">
+                                <div class="row rg-master"> 
+                                    <div class="col-md-4 col-md-offset-4 text-center thing">
+                                        <h1 class="wow fadeInLeft">Login</h1>
+                                        <hr class="wow fadeInRight">
+                                        <form class="wow fadeInRight">
+                                            <div class="form-group">
+                                                <label for="newUserEmail">Email</label>
+                                                <input type="email" class="form-control" placeholder="Type Email Here" ng-model="email">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="password">Password</label>
+                                                <input type="password" class="form-control" placeholder="New Password Here" ng-model="password">
+                                            </div>
+                                            <button type="submit" ng-click="login()" class="btn btn-lg btn-danger">Login</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="/register">Sign Up</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="/volunteer_logout">Log Out</a></li>
+                <li><a href="/" ng-click="logout()" >Log Out</a></li>
             </ul>
         </div>
     </div>
 </div>
+
+<!--this is for making the miltilayer dropdown-->
+<!--<script>
+$(document).ready(function(){
+  $('.dropdown a.test').on("click", function(e){
+    $(this).next('ul').toggle();
+    e.stopPropagation();
+    e.preventDefault();
+  });
+});
+</script>-->
