--- a/client/views/organizationLogin.html
+++ b/client/views/organizationLogin.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row rg-master">
             <div class="col-md-4 col-md-offset-4 text-center thing">
-                <h1 class="wow fadeInLeft" >Organization Login</h1>
+                <h1 class="wow fadeInLeft">Organization Login</h1>
                 <hr class="wow fadeInRight">
                 <form class="wow fadeInRight">
                     <div class="form-group">
@@ -25,3 +25,31 @@
         </div>
     </div>
 </div>
+
+
+
+<li>
+    <div class=" signInDrop">
+        <div class="row rg-master">
+            <div class="col-md-4 col-md-offset-4 text-center thing">
+                <h1 class="wow fadeInLeft">Organization Login</h1>
+                <hr class="wow fadeInRight">
+                <form class="wow fadeInRight">
+                    <div class="form-group">
+                        <a href="/auth/google">Sign In with Google</a>
+                        <hr/>
+                    </div>
+                    <div class="form-group">
+                        <label for="newUserEmail">Email</label>
+                        <input type="email" class="form-control" placeholder="Type Email Here" ng-model="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" placeholder="New Password Here" ng-model="password">
+                    </div>
+                    <button type="submit" ng-click="login()" class="btn btn-lg btn-danger">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</li>
