--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -1,15 +1,12 @@
 <main-nav></main-nav>
 
-<div class="orgBG"></div>
-<div class="jumbotron">
-  <h1>{{ organization.organizationName }}</h1>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail vol-profile-cont">
-        <img ng-src="{{organization.image}}">
+<div id="volHeader" class="volHeader">
+  <div class="container">
+    <div id="firstRow" class="row">
+      <img class="profilePic" src="./images/team-1.jpg" alt="users picture">
+    </div>
+    <div id="secondRow" class="row">
+      <div id="aboutThumbnail" class="thumbnail col-md-3 wow fadeInLeft">
         <div class="caption">
           <h3>{{ organization.organizationName }}</h3>
           <p>{{ organization.address }}</p>
@@ -18,45 +15,88 @@
           <p>{{ organization.zip }}</p>
           <hr>
           <p>{{ organization.about }}</p>
+          <buttton ng-click="editProfile()" class="btn btn-danger">Edit Profile</buttton>
         </div>
-        <buttton ng-click="editProfile()" class="btn btn-danger"> <a href="/edit_organization_profile/:id">Edit Profile</a></buttton>
       </div>
-    </div>
-    <div class="col-md-8 pull-right">
-      <div class="thumbnail vol-profile-cont">
-        <h1>Available Events </h1> <buttton ng-click="editProfile()" class="btn btn-danger"> <a href="#">Create New Event</a></buttton>
-        <hr>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Date</th>
-              <th>Location</th>
-              <th>Activity</th>
-              <th>Hours</th>
-            </tr>
-          </thead>
-          <tbody ng-repeat="c in completedEvents">
-            <td>{{ c.date}}</td>
-            <td>{{ c.organizationName }}</td>
-            <td>{{ c.title }}</td>
-            <td>{{ c.endTime - c.startTime }}</td>
-          </tbody>
-        </table>
+      <div class="col-md-6">
+        <div class="thumbnail vol-profile-cont">
+          <h1>{{organization.organizationName}}'s Events </h1>
+          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#createEventModal">Create new event</button>
+          <hr>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Location</th>
+                <th>Activity</th>
+                <th>Hours</th>
+              </tr>
+            </thead>
+            <tbody ng-repeat="c in completedEvents">
+              <td>{{ c.date}}</td>
+              <td>{{ c.organizationName }}</td>
+              <td>{{ c.title }}</td>
+              <td>{{ c.endTime - c.startTime }}</td>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
+      <div id="aboutThumbnail" class="thumbnail col-md-3 wow fadeInRight">
+        <div class="caption">
+          <h1>Past Events</h1>
+          <hr>
+          <p>{{ volunteer.events }}</p>
+          <p>{{ volunteer.events }}</p>
+          <p>{{ volunteer.events }}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
-<hr>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-12 text-center">
-      <a class="menu-item" href="/volunteer_logout">Log out dis bit</a>
+<!--MODAL INFO-->
+<div class="modal fade" id="createEventModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="form">
+    <div class="modal-content">
+      <!--Header-->
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLabel">Create your new event!</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <!--Body-->
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="recipient-name" class="form-control-label">Title:</label>
+            <input type="text" class="form-control" id="newTitle">
+          </div>
+          <div class="form-group">
+            <label for="newDescription" class="form-control-label">Description:</label>
+            <textarea class="form-control" id="newDescription"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="newLocation" class="form-control-label">Location:</label>
+            <input type="text" class="form-control" id="newLocation">
+          </div>
+          <div class="form-group">
+            <label for="newStartTime" class="form-control-label">Start Time:</label>
+            <input type="time" class="form-control" id="newStartTime" placeholder="hour:minute:am/pm">
+          </div>
+          <div class="form-group">
+            <label for="newEndTime" class="form-control-label">End Time:</label>
+            <input type="time" class="form-control" id="newEndTime">
+          </div>
+
+        </form>
+      </div>
+      <!--footer-->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" ng-click="editProfile()">Add event</button>
+      </div>
     </div>
   </div>
 </div>
