--- a/client/views/register.html
+++ b/client/views/register.html
@@ -4,134 +4,169 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center rg-master">
-                <h1>Register for an account</h1>
+                <h1>Sign Up To Link Up</h1>
                 <h5>Which type of account best describe you: </h5>
                 <br/>
-
-                <!-- beginning of radio container -->
+                <!-- beginning of buttons container -->
                 <div class="container rg-master-1">
                     <div class="row">
                         <div class="col-md-4 text-center">
                             <div class="radio">
                                 <label for="org">
-                                <input type="radio" class="custom-control-input" name="acctOptions" value="org" ng-click="orgClick()" ng-model="userType">
-                                <span class="custom-control-input"></span>
-                                <span class="custom-control-input">Organization</span> 
+                                    <button type="button" class="btn btn-large btn-primary" data-toggle="modal" value="org" ng-click="orgClick()" ng-model="userType" data-target="#organizationRegisterModal">Organization</button>
                             </label>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="radio">
                                 <label for="vol">
-                                <input type="radio" name="acctOptions" value="vol" ng-click="volClick()" ng-model="userType">
-                                <span class="custom-control-input"></span>
-                                <span class="custom-control-input">Volunteer</span>
+                                <button type="button" class="btn btn-large btn-primary" data-toggle="modal" value="vol" ng-click="volClick()" ng-model="userType" data-target="#volunteerRegisterModal">Volunteer</button>
                             </label>
                             </div>
                         </div>
                     </div>
-                    <!-- end of radio row -->
-
-                    <!-- org register -->
-                    <div class="container" ng-show="userType === 'org'">
-                        <div class="row">
-                            <div class="col-md-8 text-justify">
-                                <form>
-                                    <!-- beginning orgs form -->
-                                    <div class="form-group">
-                                        <label for="orgName">Organization Name</label>
-                                        <input type="text" class="form-control" placeholder="Enter Organization Name" ng-model="orgName">
-
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label for="orgContact">Primary Contact</label>
-                                                    <input type="text" class="form-control" placeholder="Main Contact" ng-model="orgContact">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label for="orgContactPhone">Primary Phone</label>
-                                                    <input type="text" class="form-control" placeholder="Contact Phone Number" ng-model="orgContactPhone">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label for="orgEmail">Organization Email & Username</label>
-                                                    <input type="text" class="form-control" placeholder="Enter Organization Email" ng-model="orgEmail">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label for="orgName">Password</label>
-                                                    <input type="text" class="form-control" placeholder="Enter Password" ng-model="orgPassword">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="orgAddress">Address</label>
-                                            <input type="text" class="form-control" placeholder="Address Line 1" ng-model="orgAddress1">
-                                            <br/>
-                                            <input type="text" class="form-control" placeholder="Address Line 2" ng-model="orgAddress2">
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-4">
-                                                <div class="form-group">
-                                                    <label for="orgCity">City</label>
-                                                    <input type="text" class="form-control" placeholder="Enter City" ng-model="orgCity">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group">
-                                                    <label for="orgState">State</label>
-                                                    <input type="text" class="form-control" placeholder="" ng-model="orgState">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-4">
-                                                <div class="form-group">
-                                                    <label for="orgZip">Zip Code</label>
-                                                    <input type="text" class="form-control" placeholder="XXXXX" ng-model="orgZip">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <button class="btn btn-lg btn-danger" ng-click="createOrg()">Create Account</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- vol register -->
-                    <div class="container" ng-show="userType === 'vol'">
-                        <div class="row">
-                            <div class="col-md-8 text-justify">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="volName">Name</label>
-                                        <input type="text" class="form-control" placeholder="Enter your full name" ng-model="volName">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="volEmail">Email</label>
-                                        <input type="text" class="form-control" placeholder="Enter your email address" ng-model="volEmail">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="volPassword">Password</label>
-                                        <input type="text" class="form-control" placeholder="Enter a new password" ng-model="volPassword">
-                                    </div>
-                                    <div class="text-center">
-                                        <button class="btn btn-lg btn-danger" ng-click="createVol()">Create Account</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- end of buttons row -->
                 </div>
             </div>
         </div>
     </div>
-
 </div>
+
+
+
+<!--org reg modal-->
+
+<div class="modal fade" id="organizationRegisterModal" tabindex="-1" role="dialog" aria-labelledby="organizationRegisterModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="form">
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <h3 class="modal-title" id="organizationRegisterModalLabel">Register as an Organization!</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+            </div>
+            <!--Body-->
+            <div class="modal-body">
+                <div class="container" ng-show="userType === 'org'">
+                    <div class="row">
+                        <div class="col-md-8 text-justify">
+                            <form>
+                                <!-- beginning orgs form -->
+                                <div class="form-group">
+                                    <label for="orgName">Organization Name</label>
+                                    <input type="text" class="form-control" placeholder="Enter Organization Name" ng-model="orgName">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="orgContact">Primary Contact</label>
+                                                <input type="text" class="form-control" placeholder="Main Contact" ng-model="orgContact">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="orgContactPhone">Primary Phone</label>
+                                                <input type="text" class="form-control" placeholder="Contact Phone Number" ng-model="orgContactPhone">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="orgEmail">Organization Email & Username</label>
+                                                <input type="text" class="form-control" placeholder="Enter Organization Email" ng-model="orgEmail">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="orgName">Password</label>
+                                                <input type="text" class="form-control" placeholder="Enter Password" ng-model="orgPassword">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="orgAddress">Address</label>
+                                            <input type="text" class="form-control" placeholder="Address Line 1" ng-model="orgAddress1">
+                                            <br/>
+                                        <input type="text" class="form-control" placeholder="Address Line 2" ng-model="orgAddress2">
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label for="orgCity">City</label>
+                                                <input type="text" class="form-control" placeholder="Enter City" ng-model="orgCity">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label for="orgState">State</label>
+                                                <input type="text" class="form-control" placeholder="" ng-model="orgState">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label for="orgZip">Zip Code</label>
+                                                <input type="text" class="form-control" placeholder="XXXXX" ng-model="orgZip">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--footer-->
+            <div class="modal-footer">
+                <button type="button " class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button class="btn btn-danger" ng-click="createOrg()">Create Account</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--Vol Reg Modal-->
+<div class="modal fade" id="volunteerRegisterModal" tabindex="-1" role="dialog" aria-labelledby="volRegisterModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <h3 class="modal-title" id="volRegisterModalLabel">Register as a Volunteer!</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+            </div>
+            <!--Body-->
+            <div class="modal-body">
+                <div class="container" ng-show="userType === 'vol'">
+                    <div class="row">
+                        <div class="col-md-8 text-justify">
+                            <form>
+                                <div class="form-group">
+                                    <label for="volName">Name</label>
+                                    <input type="text" class="form-control" placeholder="Enter your full name" ng-model="volName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="volEmail">Email</label>
+                                    <input type="text" class="form-control" placeholder="Enter your email address" ng-model="volEmail">
+                                </div>
+                                <div class="form-group">
+                                    <label for="volPassword">Password</label>
+                                    <input type="text" class="form-control" placeholder="Enter a new password" ng-model="volPassword">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--footer-->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button class="btn btn-danger" ng-click="createVol()">Create Account</button>
+            </div>
+        </div>
+    </div>
+</div>
+<contact-area></contact-area>
