--- a/client/views/volunteerLogin.html
+++ b/client/views/volunteerLogin.html
@@ -25,3 +25,27 @@
         </div>
     </div>
 </div>
+
+
+<!--THIS IS FOR THE DROP DOWN-->
+<li>
+    <div class=" signInDrop">
+        <div class="row rg-master">
+            <div class="col-md-4 col-md-offset-4 text-center thing">
+                <h1 class="wow fadeInLeft">Login</h1>
+                <hr class="wow fadeInRight">
+                <form class="wow fadeInRight">
+                    <div class="form-group">
+                        <label for="newUserEmail">Email</label>
+                        <input type="email" class="form-control" placeholder="Type Email Here" ng-model="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" placeholder="New Password Here" ng-model="password">
+                    </div>
+                    <button type="submit" ng-click="login()" class="btn btn-lg btn-danger">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</li>
