--- a/client/views/volunteerLogout.html
+++ b/client/views/volunteerLogout.html
@@ -1,1 +1,1 @@
-<button id="button" class="logout-button" ng-click="logoutVolunteer()">LOGOUT</button>
+<button id="button" class="logout-button" ng-click="logout()">LOGOUT</button>
